# djabra

./: .editorconfig  .gitignore  .tool-versions  package-lock.json  package.json  pyproject.toml  webpack.config.js
apps/: settings.py  urls.py
apps/apps/: settings.py  urls.py
apps/directors/: views.py
apps/directors/migrations/: 0001_initial.py
assets/: index.js
assets/controllers/: directors_controller.js
directors/: models.py
directors/migrations/: 0002_rename_director_directors.py
templates/: base.html  index.html
templates/directors/: index.html
