[tool.poetry]
name = "djabra"
version = "0.1.0"
description = ""
authors = ["Dwi Ahmad <dwi.hyuga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
